--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <meta name="description"
+    content=" This is a simple project that shows how to use different types of charts in a React application. 
+    The project uses TypeScript, TailwindCSS, FluentUI, and Echarts. 
+    The project is built with Vite, a modern build tool that significantly improves the frontend development experience." />
+  <meta name="theme-color" content="#000000" />
+  <meta name="keywords" content="React, TypeScript, TailwindCSS, FluentUI, Charts" />
+  <meta name="author" content="Kevin García" />
+  <meta name="robots" content="index, follow" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <meta property="og:title" content="Charts Examples" />
+  <meta property="og:description"
+    content="This is a simple project that shows how to use different types of charts in a React application. 
+  The project uses TypeScript, TailwindCSS, FluentUI, and Echarts. 
+  The project is built with Vite, a modern build tool that significantly improves the frontend development experience." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.facebook.com/profile.php?id=100009365110374" />
+  <meta property="og:image"
+    content="https://res.cloudinary.com/devsing/image/upload/v1714863009/gov8vkpduuie0ey4mwio.png" />
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@gkevin_y" />
+  <meta name="twitter:creator" content="@gkevin_y" />
+  <meta name="twitter:title" content="Charts Examples" />
+  <meta name="twitter:description"
+    content="This is a simple project that shows how to use different types of charts in a React application. 
+  The project uses TypeScript, TailwindCSS, FluentUI, and Echarts. 
+  The project is built with Vite, a modern build tool that significantly improves the frontend development experience." />
+  <meta name="twitter:image"
+    content="https://res.cloudinary.com/devsing/image/upload/v1714863009/gov8vkpduuie0ey4mwio.png" />
+  <title>Charts Examples</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
